2006-07-16  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump.
	* vala/parser.y: remove g_object_unref call to fix crash in parsing
	  array declarations
	* vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala: support
	  creating structs
	* vapi/glib-2.0.vala: GString enhancements
	* vapi/Makefile.am: dist gtk+-2.0.vala and pango.vala

2006-07-15  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.1 release
	* README: add introduction
	* COPYING: replace by LGPL
	* compiler/valacompiler.vala: add /usr/local/share/vala/vapi ad default
	  vapi search dir
	* vapi/glib-2.0.vala: File and HashTable enhancements

2006-07-14  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valacodegenerator.vala, vala/valasymbolresolver.vala,
	  vala/scanner.l, vala/valatypereference.vala,
	  vala/valasemanticanalyzer.vala, vala/valaelementaccess.vala,
	  vala/valadatatype.vala, vala/parser.y, vala/valaarray.vala,
	  vala/valacodevisitor.vala, ccode/valaccodeelementaccess.vala: add
	  element access support
	* vala/valasemanticanalyzer.vala: add visit_postfix_expression
	  implementation
	* tests/test-019.vala: add element access testcase
	* vala/Makefile.am, tests/Makefile.am, ccode/Makefile.am: update

2006-07-14  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala: ignore file-internal dependencies
	* vala/valasemanticanalyzer.vala: mark string literals as non-null, add
	  some implicit casts
	* vala/valamemorymanager.vala: only check for leaks with reference
	  types, manage memory in field initializers
	* vala/valacodegenerator.vala: add non-null parameter typechecks for
	  structs, simplify ref expression if expression is known to be non-null
	* vapi/glib-2.0.vala: unichar, string, String, and Path enhancements,
	  add Base64 and Dir

2006-07-10  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: adapt to changes in InvocationExpression,
	  LocalVariableDeclaration, and InitializerList