@@ -40,8 +40,9 @@ public class Vala.MemoryManager : CodeVisitor {
 	
 	private void visit_possibly_leaked_expression (Expression! expr) {
 		if (expr.static_type != null &&
-		    (expr.static_type.type != null &&
-		     expr.static_type.type.is_reference_type ()) &&
+		    ((expr.static_type.type != null &&
+		      expr.static_type.type.is_reference_type ()) ||
+		     expr.static_type.type_parameter != null) &&
 		    expr.static_type.is_ref) {
 			/* mark reference as leaked */
 			expr.ref_leaked = true;
@@ -50,8 +51,9 @@ public class Vala.MemoryManager : CodeVisitor {
 
 	private void visit_possibly_missing_copy_expression (Expression! expr) {
 		if (expr.static_type != null &&
-		    (expr.static_type.type != null &&
-		     expr.static_type.type.is_reference_type ()) &&
+		    ((expr.static_type.type != null &&
+		      expr.static_type.type.is_reference_type ()) ||
+		     expr.static_type.type_parameter != null) &&
 		    !expr.static_type.is_ref) {
 			/* mark reference as missing */
 			expr.ref_missing = true;
